@@ -1,3 +1,8 @@
+2012-03-15  Torbjorn Granlund  <tege@gmplib.org>
+
+	* mpn/x86_64/core2/gcd_1.asm: Speed up loop code, simplify non-loop
+	code.
+
 2012-03-13  Torbjorn Granlund  <tege@gmplib.org>
 
 	* mpn/x86_64/core2/gcd_1.asm: Add hack to support fat builds.
